# wad-service

./: .gitmodules  Cargo.toml  Dockerfile  Makefile  README.md  build.rs
database/migrations/: 20250203004000_user.sql  20250203011448_dictionary.sql
database/seed/: insert_words.sql
migrations/: 20241228214150_init.sql
src/: db_client.rs  lib.rs
src/auth/: apple_keys.rs  auth_utils.rs  mod.rs
src/services/: db_models.rs  dictionary.rs  dictionary_models.rs  dictionary_service.rs  mod.rs
