[package]
name = "wad-service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
hyper = { version = "1.5.2", features = ["full"] }
prost = "0.13.4"
tokio = { version = "1.42.0", features = ["full"] }
tonic = "0.12.3"
tower = "0.5.2"

[build-dependencies]
tonic-build = "0.12.3"
