[package]
name = "wad-service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
dotenvy = "0.15.7"
hyper = { version = "1.5.2", features = ["full"] }
prost = "0.13.4"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres"] }
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["full"] }
tonic = "0.12.3"
tonic-reflection = "0.12.3"
tower = "0.5.2"

[build-dependencies]
tonic-build = { version = "0.12.3", features = ["prost"] }

[dev-dependencies]
sqlx-cli = "0.8.2"
